--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "jeffrey@laracasts.com"
         }
     ],
+    "license": "MIT",
     "require": {
         "php": ">=8.0"
     },
