:heavy_plus_sign: Added test script to composer.json

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "psr-4": {
             "Laracasts\\Transcriptions\\": "src/"
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
